[package]
name = "elliptic-curve-gost"
license = "Apache-2.0"
description = """
Small elliptic curve implementation (GOST 34.10-2018), calculations are based on 
[big integer library](https://github.com/RustCrypto/crypto-bigint/tree/master) 
from Rust Crypto.
"""
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-bigint = "0.5.1"